STM32/stm32_workspace/.metadata/.plugins/org.eclipse.cdt.ui/small_led_driver.build.log
17:51:50 **** Incremental Build of configuration Debug for project small_led_driver ****
make -j7 all 
arm-none-eabi-gcc "../src/flash_info.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L431xx -c -I../sdk/FreeRTOS/Source/CMSIS_RTOS_V2 -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/ws2812b_driver" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/color_led" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/animate_led" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/task" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/current_monitor" -I"/Users/spud/Documents/GitHub/Spud_code_collection/STM32/stm32_workspace/fw_common/lib/semaphore" -I../src/stm32_bloat -I../sdk/CMSIS/Device/ST/STM32L4xx/Include -I../sdk/CMSIS/Include -I../src/bsp -I../startup -I../src -I../sdk/STM32l4xx_HAL_Driver/Inc -I../sdk/STM32l4xx_HAL_Driver/Inc/Legacy -I../sdk/FreeRTOS/Source -I../sdk/FreeRTOS/Source/include -I../sdk/FreeRTOS/Source/portable/GCC/ARM_CM4F -I../src/bsp/board_specific -I../src/bsp/board_specific/board_init_spud_glo_v1 -I../src/bsp/board_specific/board_init_spud_glo_v2 -I../src/bsp/board_specific/board_init_spud_glo_v3 -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"src/flash_info.d" -MT"src/flash_info.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "src/flash_info.o"
../src/flash_info.c: In function 'flash_info_write_config_data_to_flash':
../src/flash_info.c:217:10: warning: variable 'write_to_flash' set but not used [-Wunused-but-set-variable]
  217 |     bool write_to_flash = false;
      |          ^~~~~~~~~~~~~~
../src/flash_info.c: In function 'flash_info_write_status_data_to_flash':
../src/flash_info.c:235:10: warning: unused variable 'write_to_flash' [-Wunused-variable]
  235 |     bool write_to_flash = false;
      |          ^~~~~~~~~~~~~~
In file included from /Applications/STM32CubeIDE.app/Contents/Eclipse/plugins/com.st.stm32cube.ide.mcu.externaltools.gnu-tools-for-stm32.10.3-2021.10.macos64_1.0.0.202111181127/tools/arm-none-eabi/include/time.h:16,
                 from ../src/flash_info.c:3:
../src/flash_info.c: In function 'flash_info_write_image_data_to_flash':
../src/flash_info.c:291:60: error: 'struct <anonymous>' has no member named 'selected_image'; did you mean 'select_image'?
  291 |         case offsetof(flash_info_image_block_t, image_data.selected_image):
      |                                                            ^~~~~~~~~~~~~~
../src/flash_info.c:303:9: warning: implicit declaration of function 'flash_access_write_to_flash' [-Wimplicit-function-declaration]
  303 |         flash_access_write_to_flash(FLASH_START_ADDRESS + FLASH_SUB_BLOCK_CONFIG_ADDRESS_OFFSET, g_flash_info_image_block.flat_data_uint64, FLASH_INFO_SUB_BLOCK_SIZE_BYTES / (sizeof(uint64_t)));
      |         ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/flash_info.c: In function 'flash_info_write_to_flash':
../src/flash_info.c:314:13: warning: implicit declaration of function 'flash_info_write_config_block_to_flash'; did you mean 'flash_info_write_config_data_to_flash'? [-Wimplicit-function-declaration]
  314 |             flash_info_write_config_block_to_flash(address);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             flash_info_write_config_data_to_flash
../src/flash_info.c:317:13: warning: implicit declaration of function 'flash_info_write_status_block_to_flash'; did you mean 'flash_info_write_status_data_to_flash'? [-Wimplicit-function-declaration]
  317 |             flash_info_write_status_block_to_flash(address);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             flash_info_write_status_data_to_flash
../src/flash_info.c:320:13: warning: implicit declaration of function 'flash_info_write_image_block_to_flash'; did you mean 'flash_info_write_image_data_to_flash'? [-Wimplicit-function-declaration]
  320 |             flash_info_write_image_block_to_flash(address);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             flash_info_write_image_data_to_flash
../src/flash_info.c: In function 'flash_info_read_from_flash':
../src/flash_info.c:333:13: warning: implicit declaration of function 'flash_info_read_config_block_to_flash'; did you mean 'flash_info_write_config_data_to_flash'? [-Wimplicit-function-declaration]
  333 |             flash_info_read_config_block_to_flash(address);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             flash_info_write_config_data_to_flash
../src/flash_info.c:336:13: warning: implicit declaration of function 'flash_info_read_status_block_to_flash'; did you mean 'flash_info_write_status_data_to_flash'? [-Wimplicit-function-declaration]
  336 |             flash_info_read_status_block_to_flash(address);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             flash_info_write_status_data_to_flash
../src/flash_info.c:339:13: warning: implicit declaration of function 'flash_info_read_image_block_to_flash'; did you mean 'flash_info_write_image_data_to_flash'? [-Wimplicit-function-declaration]
  339 |             flash_info_read_image_block_to_flash(address);
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |             flash_info_write_image_data_to_flash
make: *** [src/subdir.mk:37: src/flash_info.o] Error 1
"make -j7 all" terminated with exit code 2. Build might be incomplete.

17:51:50 Build Failed. 2 errors, 9 warnings. (took 733ms)

